Notifications config in bolt ()
* Introduce notification configuration in bolt.